// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Default should match snapshot 1`] = `
{
  "Mappings": {
    "ParamsandsecretslayerMap": {
      "af-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:af-south-1:317013901791:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-east-1:768336418462:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-northeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-northeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-2:738900069198:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-south-1:176022468876:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-1:044395824272:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-2:665172237481:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-3": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-3:490737872127:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ca-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:ca-central-1:200266452380:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-central-1:187925254637:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-north-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-north-1:427196147048:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-south-1:325218067255:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-1:015030872274:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-2:133256977650:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-3": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-3:780235371811:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "me-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:me-south-1:832021897121:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "sa-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:sa-east-1:933737806257:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-east-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-2:590474943231:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-1:997803712105:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE": {
      "Properties": {
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerAutoStartPreventFunctionCurrentVersionFE8F986Ea5b7b890add078bd853e6c4d80f8c111",
            "Version",
          ],
        },
        "Name": "live",
      },
      "Type": "AWS::Lambda::Alias",
    },
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionCurrentVersionFE8F986Ea5b7b890add078bd853e6c4d80f8c111": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316": {
      "DependsOn": [
        "EC2InstanceRunningSchedulerRunningSchedulerFunctionRoleDefaultPolicy567D5372",
        "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "58c3571ef328ef47bd9564fb2f0df2ce6af830d5db0ea8891d828b28c269b893.zip",
        },
        "Description": "A function to prevent the RDS Database or Cluster from starting automatically.",
        "DurableConfig": {
          "ExecutionTimeout": 7200,
          "RetentionPeriodInDays": 1,
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_ENABLED": "true",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_SIZE": "500",
            "PARAMETERS_SECRETS_EXTENSION_HTTP_PORT": "2773",
            "PARAMETERS_SECRETS_EXTENSION_LOG_LEVEL": "info",
            "PARAMETERS_SECRETS_EXTENSION_MAX_CONNECTIONS": "3",
            "SECRETS_MANAGER_TIMEOUT_MILLIS": "0",
            "SECRETS_MANAGER_TTL": "300",
            "SLACK_SECRET_NAME": "example/slack/webhook",
            "SSM_PARAMETER_STORE_TIMEOUT_MILLIS": "0",
            "SSM_PARAMETER_STORE_TTL": "300",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Fn::FindInMap": [
              "ParamsandsecretslayerMap",
              {
                "Ref": "AWS::Region",
              },
              "1x0x103xarm64",
            ],
          },
        ],
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "EC2InstanceRunningSchedulerRunningSchedulerFunctionLogGroup9FDF6CF9",
          },
          "SystemLogLevel": "INFO",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionEventInvokeConfig2B368353": {
      "Properties": {
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316",
        },
        "MaximumRetryAttempts": 2,
        "Qualifier": "$LATEST",
      },
      "Type": "AWS::Lambda::EventInvokeConfig",
    },
    "EC2InstanceRunningSchedulerDBClusterEvent92D730D8": {
      "Properties": {
        "Description": "db cluster running event catch rule",
        "EventPattern": {
          "detail": {
            "EventID": [
              "RDS-EVENT-0153",
            ],
          },
          "detail-type": [
            "RDS DB Cluster Event",
          ],
          "source": [
            "aws.rds",
          ],
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
            },
            "Id": "Target0",
            "RetryPolicy": {
              "MaximumRetryAttempts": 2,
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "EC2InstanceRunningSchedulerDBClusterEventAllowEventRuleRDSDatabaseAutoStartPreventStackEC2InstanceRunningSchedulerAutoStartPreventFunctionAliaslive6AD6673B0F89ABC1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerDBClusterEvent92D730D8",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "EC2InstanceRunningSchedulerDBInstanceEventAllowEventRuleRDSDatabaseAutoStartPreventStackEC2InstanceRunningSchedulerAutoStartPreventFunctionAliaslive6AD6673BC294FA40": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerDBInstanceEventE92BE165",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "EC2InstanceRunningSchedulerDBInstanceEventE92BE165": {
      "Properties": {
        "Description": "rds db instance running event catch rule.",
        "EventPattern": {
          "detail": {
            "EventID": [
              "RDS-EVENT-0154",
            ],
          },
          "detail-type": [
            "RDS DB Instance Event",
          ],
          "source": [
            "aws.rds",
          ],
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
            },
            "Id": "Target0",
            "RetryPolicy": {
              "MaximumRetryAttempts": 2,
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "EC2InstanceRunningSchedulerRunningSchedulerFunctionLogGroup9FDF6CF9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "A role to control the RDS Database or Cluster.",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicDurableExecutionRolePolicy",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EC2InstanceRunningSchedulerRunningSchedulerFunctionRoleDefaultPolicy567D5372": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "tag:GetResources",
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "GetResources",
            },
            {
              "Action": [
                "rds:DescribeDBInstances",
                "rds:DescribeDBClusters",
                "rds:StopDBInstance",
                "rds:StopDBCluster",
              ],
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "RdsAutoStartControl",
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:example/slack/webhook-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EC2InstanceRunningSchedulerRunningSchedulerFunctionRoleDefaultPolicy567D5372",
        "Roles": [
          {
            "Ref": "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Disable should match snapshot 1`] = `
{
  "Mappings": {
    "ParamsandsecretslayerMap": {
      "af-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:af-south-1:317013901791:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-east-1:768336418462:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-northeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-northeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-2:738900069198:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-south-1:176022468876:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-1:044395824272:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-2:665172237481:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-3": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-3:490737872127:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ca-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:ca-central-1:200266452380:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-central-1:187925254637:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-north-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-north-1:427196147048:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-south-1:325218067255:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-1:015030872274:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-2:133256977650:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-3": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-3:780235371811:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "me-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:me-south-1:832021897121:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "sa-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:sa-east-1:933737806257:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-east-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-2:590474943231:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-1:997803712105:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE": {
      "Properties": {
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerAutoStartPreventFunctionCurrentVersionFE8F986Ea5b7b890add078bd853e6c4d80f8c111",
            "Version",
          ],
        },
        "Name": "live",
      },
      "Type": "AWS::Lambda::Alias",
    },
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionCurrentVersionFE8F986Ea5b7b890add078bd853e6c4d80f8c111": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316": {
      "DependsOn": [
        "EC2InstanceRunningSchedulerRunningSchedulerFunctionRoleDefaultPolicy567D5372",
        "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "58c3571ef328ef47bd9564fb2f0df2ce6af830d5db0ea8891d828b28c269b893.zip",
        },
        "Description": "A function to prevent the RDS Database or Cluster from starting automatically.",
        "DurableConfig": {
          "ExecutionTimeout": 7200,
          "RetentionPeriodInDays": 1,
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_ENABLED": "true",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_SIZE": "500",
            "PARAMETERS_SECRETS_EXTENSION_HTTP_PORT": "2773",
            "PARAMETERS_SECRETS_EXTENSION_LOG_LEVEL": "info",
            "PARAMETERS_SECRETS_EXTENSION_MAX_CONNECTIONS": "3",
            "SECRETS_MANAGER_TIMEOUT_MILLIS": "0",
            "SECRETS_MANAGER_TTL": "300",
            "SLACK_SECRET_NAME": "example/slack/webhook",
            "SSM_PARAMETER_STORE_TIMEOUT_MILLIS": "0",
            "SSM_PARAMETER_STORE_TTL": "300",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Fn::FindInMap": [
              "ParamsandsecretslayerMap",
              {
                "Ref": "AWS::Region",
              },
              "1x0x103xarm64",
            ],
          },
        ],
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "EC2InstanceRunningSchedulerRunningSchedulerFunctionLogGroup9FDF6CF9",
          },
          "SystemLogLevel": "INFO",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "EC2InstanceRunningSchedulerAutoStartPreventFunctionEventInvokeConfig2B368353": {
      "Properties": {
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionD0890316",
        },
        "MaximumRetryAttempts": 2,
        "Qualifier": "$LATEST",
      },
      "Type": "AWS::Lambda::EventInvokeConfig",
    },
    "EC2InstanceRunningSchedulerDBClusterEvent92D730D8": {
      "Properties": {
        "Description": "db cluster running event catch rule",
        "EventPattern": {
          "detail": {
            "EventID": [
              "RDS-EVENT-0153",
            ],
          },
          "detail-type": [
            "RDS DB Cluster Event",
          ],
          "source": [
            "aws.rds",
          ],
        },
        "State": "DISABLED",
        "Targets": [
          {
            "Arn": {
              "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
            },
            "Id": "Target0",
            "RetryPolicy": {
              "MaximumRetryAttempts": 2,
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "EC2InstanceRunningSchedulerDBClusterEventAllowEventRuleRDSDatabaseAutoStartPreventStackEC2InstanceRunningSchedulerAutoStartPreventFunctionAliaslive6AD6673B0F89ABC1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerDBClusterEvent92D730D8",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "EC2InstanceRunningSchedulerDBInstanceEventAllowEventRuleRDSDatabaseAutoStartPreventStackEC2InstanceRunningSchedulerAutoStartPreventFunctionAliaslive6AD6673BC294FA40": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "EC2InstanceRunningSchedulerDBInstanceEventE92BE165",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "EC2InstanceRunningSchedulerDBInstanceEventE92BE165": {
      "Properties": {
        "Description": "rds db instance running event catch rule.",
        "EventPattern": {
          "detail": {
            "EventID": [
              "RDS-EVENT-0154",
            ],
          },
          "detail-type": [
            "RDS DB Instance Event",
          ],
          "source": [
            "aws.rds",
          ],
        },
        "State": "DISABLED",
        "Targets": [
          {
            "Arn": {
              "Ref": "EC2InstanceRunningSchedulerAutoStartPreventFunctionAliasliveAD5E16DE",
            },
            "Id": "Target0",
            "RetryPolicy": {
              "MaximumRetryAttempts": 2,
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "EC2InstanceRunningSchedulerRunningSchedulerFunctionLogGroup9FDF6CF9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "A role to control the RDS Database or Cluster.",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicDurableExecutionRolePolicy",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EC2InstanceRunningSchedulerRunningSchedulerFunctionRoleDefaultPolicy567D5372": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "tag:GetResources",
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "GetResources",
            },
            {
              "Action": [
                "rds:DescribeDBInstances",
                "rds:DescribeDBClusters",
                "rds:StopDBInstance",
                "rds:StopDBCluster",
              ],
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "RdsAutoStartControl",
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:example/slack/webhook-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EC2InstanceRunningSchedulerRunningSchedulerFunctionRoleDefaultPolicy567D5372",
        "Roles": [
          {
            "Ref": "EC2InstanceRunningSchedulerRunningSchedulerFunctionRole2BF102BB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
